# FLUKA

./: README.md  evtparser.py
100cm/: es1_17_tab.lis
CLOUD_RUNS/: flair-3.2.patch  flukize.sh  start.sh
CLOUD_RUNS/ES4_MC/: MC_Fundamental_spectra_resolution.csv  README.md  es4.flair  es4_17_tab.lis
CLOUD_RUNS/ES4_MONO/: MONO_Fundamental_spectra_resolution.csv  README.md  confronto_spettri_mono.xlsx  es4.flair  es4_17_tab.lis
ES1/: README.md  es1.flair  es1.inp  es1.inp.v0  es1.inp.v1
ES1/150cm/: es1_17_tab.lis
ES1/50cm/: es1_17_tab.lis
ES2/: README.md
ES2/A/: es2.inp  es2_17_tab.lis
ES2/B/: es2.inp  es2_17_tab.lis
ES2/C/: es2.inp  es2_17_tab.lis
ES3/: README.md  es3.inp  es3_17_tab.lis
ES3_BONUS/: es3.inp  es3_vxl.flair
ES4/: DETECT_6M_tab.lis  README.md  es4.flair  es4.inp
ES5/: DETECT_6M_tab.lis  README.md  es5.flair  es5.inp
stepxilize/: CMakeLists.txt  main.cpp
